netcfg (0.40) UNRELEASED; urgency=low

  * Ming Hua
    - Initial Simplified Chinese translation (zh_CN.po)
  * Bart Cornelis
    - Merged Norwegian Nynorsk (nn.po) translation from skolelinux-cvs
  * Thiemo Seufer
    - Code cleanup and whitespace police, run through the testmill
      this time.
  * Andre Dahlqvist
    - Initial Swedish translation (sv.po).

 -- Bart Cornelis <cobaco@linux.be>  Tue, 30 Dec 2003 21:46:30 +0100

netcfg (0.39) unstable; urgency=high

   * Reverted Thiemo Seufer's "code cleanup", which broke the state machine
     and made netcfg hang after getting a dhcp lease. Test before committing,
     people!

 -- Joey Hess <joeyh@debian.org>  Fri, 26 Dec 2003 13:35:58 -0500

netcfg (0.38) unstable; urgency=low

  * Peter Mann
    - Initial Slovak translation
  * André Dahlqvist
    - Added Swedish translation
  * Giuseppe Sacco
    - Updated italian translation

 -- Joey Hess <joeyh@debian.org>  Thu, 25 Dec 2003 19:31:07 -0500

netcfg (0.37) unstable; urgency=low

  * Thiemo Seufer
    - Code cleanup.
  * Gaudenz Steinlin
    - prefer udhcpc to pump (Closes: #224663)
    - copy hostname to /target/etc/mailname (Closes: #212143)
  * Bart Cornelis
    - Merged Norwegian Bokmael (nb.po) translation from skolelinux-cvs
  * Jure Cuhalev
    - Added/updated slovenian translation (sl.po). 

 -- Joey Hess <joeyh@debian.org>  Tue, 23 Dec 2003 21:47:33 -0500

netcfg (0.36) unstable; urgency=low

  * Bartosz Fenski
    - Updated Polish (pl) translation.
  * Steinar H. Gunderson
    - Updated Norwegian translation (nb.po).
  * Philippe Batailler
    - French translation improvements.
  * Christian Perrier
    - Corrected typo in templates (s/If must/It must) and updated
      all translations
  * Thiemo Seufer
    - Fix function prototypes. Improve Makefile.
  * Ognyan Kulev
    - Added/updated bulgarian translation (bg.po).
  * Kęstutis Biliūnas
    - Updated Lithuanian translation (lt.po).
  * Petter Reinholdtsen